@@ -1994,6 +1994,13 @@ command to generate the output files.
     </magic>
     <glob pattern="*.dar"/>
   </mime-type>
+  <mime-type type="application/x-alz">
+    <_comment>Alzip archive</_comment>
+    <magic priority="50">
+      <match type="string" value="ALZ" offset="0"/>
+    </magic>
+    <glob pattern="*.alz"/>
+  </mime-type>
   <mime-type type="application/x-reject">
     <sub-class-of type="text/plain"/>
     <_comment>rejected patch</_comment>
